Fix SpinnerButton left spacing

--- a/app/assets/stylesheets/components/_spinner-dots.scss
+++ b/app/assets/stylesheets/components/_spinner-dots.scss
@@ -48,7 +48,7 @@
 
 .spinner-dots--centered {
   left: 50%;
-  margin-left: -23px;
+  margin-left: -46px;
   margin-top: -6px;
   pointer-events: none;
   position: absolute;
